apps/argocd/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "ca-clusterissuer" 
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.lab1830.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80 # Or 443 if argocd-server expects HTTPS and you configured backend-protocol accordingly

  tls:
    - hosts:
        - argocd.lab1830.com
      secretName: argocd-tls-cert
